--- a/DemoMVC.WebUi/Views/Question/Index.cshtml
+++ b/DemoMVC.WebUi/Views/Question/Index.cshtml
@@ -58,8 +58,13 @@
                 .ClientTemplate("<span>#:QuestionText.substring(0, 80) #</span>");
                 columns.Bound(c => c.Difficulty).Width("7%").Title("Difficulty").ClientTemplate("#if(BadgeCode!=null && BadgeCode!=''){#" + "<span class='status' style='background:#=BadgeCode#'>#=Difficulty#</span>#} else {# #=Difficulty# #}#");
                 columns.Bound(c => c.Marks).Width("7%").Title("Marks");
-                columns.Bound(c => c.IsActive).Width("5%").HeaderHtmlAttributes(new { @class = "center_text" }).HtmlAttributes(new { @class = "kendogrid_Action center-text" }).ClientTemplate("# if(IsActive == true) {#<i class='fa fa-check'></i># } else { #<i class='fa fa-close'></i># } #").Title("Active").Filterable(filterable => filterable.Messages(m => m.IsFalse("No").IsTrue("Yes")));
-
+                columns.Bound(c => c.IsActive)
+                .Width("5%")
+                .HeaderHtmlAttributes(new { @class = "center_text" })
+                .HtmlAttributes(new { @class = "kendogrid_Action center-text" })
+                .ClientTemplate("# if(IsActive == true) {#<i class='fa fa-check'></i># } else { #<i class='fa fa-close' style='color: red;'></i># } #")
+                .Title("Active")
+                .Filterable(filterable => filterable.Messages(m => m.IsFalse("No").IsTrue("Yes")));
                 if (role == "sadmin")
                 {
                     columns.Bound(c => c.QuestionId)
@@ -67,7 +72,7 @@
                     .HtmlAttributes(new { @class = "kendogrid_Action center_text" })
                     .ClientTemplate("<div class='k_action_table'>" +
                         (AllowedEdit ? "<a title='Edit' href='" + Url.Action("Create", "Question") + "/#=QuestionId#'><i class='fa fa-edit'></i></a>" : "") +
-                        (AllowedDelete ? " <a href='javascript:void(0);' title='Delete' onclick='confirmDelete(#=QuestionId#)'><i class='fa fa-trash text-danger'></i></a>" : "") +
+                        (AllowedDelete ? " <a href='javascript:void(0);' title='Delete' onclick='confirmDelete(#=QuestionId#)'><i class='fa fa-trash'></i></a>" : "") +
                         (AllowedEdit ? "<a href='javascript:void()' onclick=\"fnShowDetails(#= QuestionId #)\"><i class='fa fa-eye'></i></a>":" ")+
                         "</div>")
                         .Filterable(false)
