--- a/DemoMVC.WebUi/Views/UserExam/_StartTestPartial.cshtml
+++ b/DemoMVC.WebUi/Views/UserExam/_StartTestPartial.cshtml
@@ -37,7 +37,7 @@
         userToken = userToken.replace(/^"|"$/g, '');
 
         var userName = "@Model.UserName";
-        var userEmail = "@Model.UserEmail";
+        var userEmail = "@Model.Email";
         var name = "@Model.Name";
 
         $.ajax({
